Esta es la 3 sección

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <div class="row">
                 <form action="">
                     <div class="div-group">
-                        <h2>Subscribe our newsletter to receive updates</h2>
+                        <h2>Suscríbete a nuestro catálogo y obtén los mejores precios.</h2>
                     </div>
                     <div class="div-group">
-                        <input type="text" placeholder="Your name*">
-                        <input type="text" placeholder="Your E-mail*">
-                        <button>Subscribe</button>
+                        <input type="text" placeholder="Nombre*">
+                        <input type="text" placeholder="E-mail*">
+                        <button>Suscríbete</button>
                     </div>
                     <div class="div-group">
-                        <h3>We will only send you the goog stuff, no spam *</h3>
+                        <h3>Sólo te enviaremos cosas buenas, no spam.*</h3>
                     </div>
                 </form>
 
